--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Utiliser C++ 20 pour la compilation.
 
 La question 1 est traitée dans les fichiers intitulés Matrix (.hpp pour la définition de la classe, .cpp pour les diverses méthodes ou constructeurs associés).
 
-Les autres questions sont traitées les fichiers portant le numéro de la question correspondante.
+Les autres questions sont traitées dans les fichiers portant le numéro de la question correspondante.
 
 Pour la question bonus 1, le cas explicite est traité dans un fichier séparé de celui du cas implicite.
 
