--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Utiliser C++ 20 pour la compilation.
-ATTENTION à la version Python (utilisation de f string, donc version Python > 3.6)
+ATTENTION à la version Python (utilisation de f string, donc version Python > 3.6).
 
 La question 1 est traitée dans les fichiers intitulés Matrix (.hpp pour la définition de la classe, .cpp pour les diverses méthodes ou constructeurs associés).
 Les autres questions sont traitées dans les fichiers portant le numéro/nom de la question correspondante. 
