--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-*** Projet C++ de Leonardo Cardinale
+*** Projet C++ de Leonardo Cardinale *** 
 
 Utiliser C++ 20 pour la compilation.
 ATTENTION à la version Python (utilisation de f string, donc version Python > 3.6).
